--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <title>Whiskey Drop | Taste a new whiskey every month</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+
   </head>
 
   <body>
@@ -33,6 +33,14 @@
       </div>
     </nav>
     <article class="container mt-3">
+        <div class="row d-none d-sm-block">
+            <div class="col-12">
+                <div class="alert alert-warning">
+                <strong>Sale Now On!</strong> We've got a sale on! Get a 12 month subscription for the price of 6!
+                 <a href="">See here for details!</a>
+                </div>
+            </div>
+        </div>
       <!-- Callout -->
       <div class="row">
         <div class="col-12">
@@ -42,7 +50,7 @@
               Sign up today to start receiving the world's best whiskeys every
               month.
               <s class="d-none d-sm-inline">£19.99</s>
-              <span class="d-inline d-sm-none"><br></span>
+              <span class="d-inline d-sm-none"><br /></span>
               <strong> <mark>First one is free!</mark> </strong>
             </p>
             <button class="btn btn-success btn-lg">Sign Up</button>
@@ -58,33 +66,45 @@
       <!-- /.callout -->
       <hr />
 
-      <!-- Quotes -->
-      <section class="quotes">
-        <div class="row">
-          <div class="col-12 my-5">
-            <h2 class="text-uppercase">Quotes:</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-6">
-            <blockquote class="blockquote">
-              <p>
-                I've been introduced to more than 10 great international
-                whiskeys I never knew about.
-              </p>
-              <p>- Jane Doe</p>
-            </blockquote>
-          </div>
-        </div>
-        <div class="col-12 col-md-6">
-          <blockquote class="blockquote">
-            <p>I haven't been sober for months!</p>
-            <p>- Jane Doe</p>
-          </blockquote>
-        </div>
-      </section>
-      <!-- /.quotes -->
-      <hr />
+        <!-- Quotes -->
+        <section class="quotes">
+            <div class="row">
+                <div class="col-12 my-5">
+                    <h2 class="text-uppercase">Quotes:</h2>
+                    <hr />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100">
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                            <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                            <footer class="blockquote-footer">Jane Doe on <cite title="Twitter">Twitter</cite></footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="media">
+                        <div class="d-none d-sm-block">
+                            <img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100">
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I haven't been sober for months!</p>
+                                <footer class="blockquote-footer">Jane Doe on <cite title="Twitter">Twitter</cite></footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /.quotes -->
+        <hr>
 
       <!-- Features -->
       <section class="features">
@@ -96,7 +116,7 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-              <h3>Feature 1</h3>
+              <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -108,7 +128,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-              <h3>Feature 2</h3>
+              <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -120,7 +140,7 @@
           </div>
           <div class="col-12 d-md-none d-lg-block col-lg-4">
             <div class="feature">
-              <h3>Feature 3</h3>
+              <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
